--- a/.github/workflows/unity-build-android.yml
+++ b/.github/workflows/unity-build-android.yml
@@ -54,7 +54,7 @@ jobs:
 
       # Authorisation
       - name: Authorisation Free disk space
-        run: git update-index --add --chmod=+x .github/workflows/scripts/free_disk_space.sh
+        run: git update-index --add --chmod=+x ./.github/workflows/scripts/free_disk_space.sh
       
       # Free up disk Space
       - name: Free disk space
