--- a/.github/workflows/unity-build-android.yml
+++ b/.github/workflows/unity-build-android.yml
@@ -51,14 +51,12 @@ jobs:
           key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
           restore-keys: |
             Library-
-
-      # Authorisation
-      - name: Authorisation Free disk space
-        run: git update-index --add --chmod=+x ./.github/workflows/scripts/free_disk_space.sh
       
       # Free up disk Space
       - name: Free disk space
-        run: .github/workflows/scripts/free_disk_space.sh
+        run:  |
+          git update-index --add --chmod=+x ./.github/workflows/scripts/free_disk_space.sh
+          .github/workflows/scripts/free_disk_space.sh
 
       # Unityプロジェクトのビルド
       # 設定しない場合、buildフォルダに出力される
