--- a/.github/workflows/unity-build-android.yml
+++ b/.github/workflows/unity-build-android.yml
@@ -55,7 +55,7 @@ jobs:
       # Free up disk Space
       - name: Free disk space
         run:  |
-          git update-index --add --chmod=+x ./.github/workflows/scripts/free_disk_space.sh
+          chmod +x ./.github/workflows/scripts/free_disk_space.sh
           .github/workflows/scripts/free_disk_space.sh
 
       # Unityプロジェクトのビルド
