--- a/.github/workflows/unity-build-android.yml
+++ b/.github/workflows/unity-build-android.yml
@@ -57,6 +57,7 @@ jobs:
         run:  |
           chmod +x ./.github/workflows/scripts/free_disk_space.sh
           .github/workflows/scripts/free_disk_space.sh
+          git checkout -- ./.github/workflows/scripts/free_disk_space.sh
 
       # Unityプロジェクトのビルド
       # 設定しない場合、buildフォルダに出力される
