--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "3.1.0",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.inputsystem": "1.8.2",
     "com.unity.render-pipelines.universal": "17.0.3",
