--- a/.github/workflows/unity-build-android.yml
+++ b/.github/workflows/unity-build-android.yml
@@ -61,7 +61,7 @@ jobs:
 
       # Unityプロジェクトのビルド
       # 設定しない場合、buildフォルダに出力される
-      - name: Run the Android build
+      - name: Run the Android Build
         uses: game-ci/unity-builder@v4.2.3
         env:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
