--- a/Packages/PlayerControl/package.json
+++ b/Packages/PlayerControl/package.json
@@ -5,7 +5,7 @@
   "unity": "2022.3",
   "author": "kochounoyume",
   "description": "Mobile-ready Unity player operation.",
-  "samples":[
+  "samples": [
     {
       "displayName": "Template with UI",
       "description": "This is a sample that uses the UI.",
@@ -16,5 +16,10 @@
       "description": "This is a sample that does not use the UI.",
       "path": "Samples~/Template_without_UI"
     }
-  ]
+  ],
+  "dependencies": {
+    "com.unity.tiny.character.controller": "",
+    "com.unity.inputsystem": "",
+    "com.unity.ugui": ""
+  }
 }
